WexGit/Wex_DX/force-app/main/default/objects/DNB_Lookup_Match_Bias_Description__mdt/DNB_Lookup_Match_Bias_Description__mdt.object-meta.xml
<CustomObject>
    <description>https://toolkit-api.dnb.com/locked/LookupRecords.asp?stat_link=020204&amp;id=752ABF1F164236266054&amp;Lang=EN</description>
    <label>DNB Lookup Match Bias Description</label>
    <pluralLabel>DNB Lookup Match Bias Descriptions</pluralLabel>
</CustomObject>