WexGit/Wex_DX/force-app/main/default/objects/DNB_Lookup_Match_Bias_Description__mdt/fields/CEO_IND__c.field-meta.xml
<CustomField>
    <fullName>CEO_IND__c</fullName>
    <label>CEO_IND</label>
    <length>4</length>
    <type>Text</type>
</CustomField>