WexGit/Wex_DX/force-app/main/default/objects/DNB_Lookup_Match_Bias_Description__mdt/fields/MTCH_BASS_CD__c.field-meta.xml
<CustomField>
    <fullName>MTCH_BASS_CD__c</fullName>
    <label>MTCH_BASS_CD</label>
    <length>4</length>
    <type>Text</type>
</CustomField>