WexGit/Wex_DX/force-app/main/default/objects/DNB_Lookup_Match_Bias_Description__mdt/fields/SUBJ_TYPE_CD__c.field-meta.xml
<CustomField>
    <fullName>SUBJ_TYPE_CD__c</fullName>
    <label>SUBJ_TYPE_CD</label>
    <length>4</length>
    <type>Text</type>
</CustomField>